overflow-x bug

--- a/system/cms/themes/pyrocms/css/workless/alerts.css
+++ b/system/cms/themes/pyrocms/css/workless/alerts.css
@@ -87,7 +87,7 @@
   	font-size: 13px;
     margin-top: 46px;
   	margin-bottom: 18px;
-    padding: 15px 0 15px 15px;
+    padding: 15px 0;
   	color: #313131;
   	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
 }
@@ -130,7 +130,7 @@
 {
   	float: right;
   	margin-top: -2px;
-    margin-right: 35px;
+    margin-right: 15px;
   	color: #000000;
   	font-size: 16px;
   	font-weight: 600;
